# learn

./: .gitignore  README.md
c++_learn/example-1/: CMakeLists.txt  arfupt.cpp  fun_ptr.cpp  main.cpp  recur.cpp  travel.cpp
c++_learn/example-10/: bank.cpp
c++_learn/example-10/include/: queue.h
c++_learn/example-10/utils/: queue.cpp
c++_learn/example-11/: usett1.cpp
c++_learn/example-11/include/: tabtenn1.h
c++_learn/example-11/utils/: tabtenn1.cpp
c++_learn/example-12/: addpntrs.cpp  usebrass1.cpp  usebrass2.cpp
c++_learn/example-12/include/: brass.h
c++_learn/example-12/utils/: brass.cpp
c++_learn/example-13/: testdma.cpp  usebrass3.cpp
c++_learn/example-13/include/: acctabc.h
c++_learn/example-13/utils/: acctABC.cpp
c++_learn/example-14/: usedma.cpp
c++_learn/example-14/include/: dma.h
c++_learn/example-14/utils/: dma.cpp
c++_learn/example-15/: use_stuc.cpp
c++_learn/example-15/include/: studentc.h
c++_learn/example-15/utils/: student.cpp
c++_learn/example-16/: stackitem.cpp
c++_learn/example-16/include/: stacktp.h
c++_learn/example-17/: stackitem.cpp
c++_learn/example-18/: pairs.cpp  tags  tempmemb.cpp  tempparm.cpp  twod.cpp
c++_learn/example-18/include/: arraytp.h  stacktp.h
c++_learn/example-19/: test  testdefine.cpp
c++_learn/example-2/: funtemp.cpp  strquote.cpp  strtref.cpp  twoswap.cpp
c++_learn/example-20/: testerase.cpp  testinvert.cpp
c++_learn/example-21/: testptr  testptr.cpp
c++_learn/example-22/: callback_example3.cpp  test_callback_c++.cpp  test_callback_c.cpp
c++_learn/example-23/: async1.cpp  async2.cpp  async3.cpp  async4.cpp  async5.cpp  async6.cpp  async7.cpp
c++_learn/example-24/: testasync.cpp  testbind.cpp  testbind2.cpp  testlambda.cpp  testmove.cpp
c++_learn/example-25/: testasync.cpp  testnestclass.cpp  testsingleton.cpp  testsingleton2.cpp  testthread_local.cpp
c++_learn/example-26/: sem_producter_customer.cpp
c++_learn/example-27/: sem_write_read.cpp  sem_write_read1.cpp  test_data_race.cpp  test_data_race1.cpp  test_join.cpp  test_share_value.cpp  test_sync.cpp
c++_learn/example-28/: test1.cpp  test5.cpp  test6.cpp  test7.cpp
c++_learn/example-29/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test_array.cpp
c++_learn/example-3/: file1.cpp
c++_learn/example-3/utils/: file2.cpp
c++_learn/example-30/: main  main.cpp  main1  main1.cpp  main2  main3  main3.cpp  text.txt
c++_learn/example-30/add/: add.cpp
c++_learn/example-30/calc/: calc.cpp  calc.h
c++_learn/example-30/pkg/: pkg.cpp  pkg.h
c++_learn/example-30/sub/: sub.cpp
c++_learn/example-30/testopencv/: testopencv.cpp  testopencv.h
c++_learn/example-31/: CMakeLists.txt  tags  test.cpp  test1.cpp  test_basket.cpp  test_message.cpp  test_query.cpp  test_strvec.cpp
c++_learn/example-32/: .gitignore  test_class_forward_decl.cpp  test_return  test_return.cpp
c++_learn/example-32/test_return.dSYM/Contents/: Info.plist
c++_learn/example-32/test_return.dSYM/Contents/Resources/DWARF/: test_return
c++_learn/example-33/: test_friend.cpp  test_friend.h  test_struct.cpp  test_thread.cpp
c++_learn/example-34/: CMakeLists.txt  arraytp.h  pairs.cpp  stcktp1.h  template1.cpp
c++_learn/example-4/: external.cpp
c++_learn/example-4/include/: support.h
c++_learn/example-4/utils/: support.cpp
c++_learn/example-5/: namessp.cpp  newplace.cpp  testnamespace.cpp
c++_learn/example-5/include/: namesp.h
c++_learn/example-5/utils/: namesp.cpp
c++_learn/example-6/: usestock00.cpp  usestock1.cpp  usestock2.cpp
c++_learn/example-6/include/: stock00.h
c++_learn/example-6/utils/: stock00.cpp
c++_learn/example-7/: usetime0.cpp
c++_learn/example-7/include/: mytime0.h
c++_learn/example-7/utils/: mytime0.cpp
c++_learn/example-8/: stone.cpp
c++_learn/example-8/include/: stonewt.h
c++_learn/example-8/utils/: stonewt.cpp
c++_learn/example-9/: placenew1.cpp  vegnews.cpp
c++_learn/example-9/include/: strngbad.h
c++_learn/example-9/utils/: strngbad.cpp
cmake_learn/example-1/: CMakeLists.txt
cmake_learn/example-1/src/: CMakeLists.txt  main.c  testFun.c
cmake_learn/example-2/: CMakeLists.txt  CMakeLists.txt.1  CMakeLists.txt.2
cmake_learn/example-2/include/: testFun.h  testFun1.h
cmake_learn/example-2/src/: CMakeLists.txt  testFun1.c
cmake_learn/example-3/: CMakeLists.txt  CMakeLists.txt.3  tags
cmake_learn/example-3/lib/: libtestFunc.dylib
cmake_learn/example-3/src/: CMakeLists.txt  testFun.c  testFun1.c
cmake_learn/example-3/test/: CMakeLists.txt  main.c
cmake_learn/example-4/: CMakeLists.txt  Makefile
cmake_learn/example-4/MathFunctions/: CMakeLists.txt  mysqrt.cpp
cmake_learn/example-5/: CMakeLists.txt  tutorial.cpp
cmake_learn/example-5/MathFunctions/: Makefile
cmake_learn/example-6/: CMakeLists.txt  tutorial.cpp
cmake_learn/example-6/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
make_learn/: Makefile
math_learn/calculus/: python_diff.py  python_taylor.py
py_learn/: test_lagrange_sympy.py  test_relax_sympy.py  test_runge.py  test_solve_sympy.py  test_sympy.py
python_plt/: limits.py  python_diff.py  python_function.py  python_function1.py  python_taylor.py
python_plt/calculus/: limits.py  python_sin.py
shell_learn/: log.txt  nohup.out  test.tar  test1.sh  test12.sh  test19.sh  test4.sh  test4out  test6.sh  testerror  testfile
shell_learn/chapter-10-15/: log.txt  test1.sh  test10.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  test9.sh
shell_learn/dir.AmEEeS/: temp.51XV9L  temp.l4r7jI
